# weld

./: README.md
examples/python/nditer/: nditer_test.py
python/: install_modules.sh
python/numpy-0.1.0/weldnumpy/: weldnumpy.py
python/pyweld/weld/: weldobject.py
weld/: Cargo.toml  build.rs
weld/llvmext/: Makefile
weld/src/: lib.rs
weld/src/codegen/: mod.rs
weld/src/codegen/c/: cmp.rs  compile.rs  dict.rs  eq.rs  hash.rs  intrinsic.rs  llvm_exts.rs  mod.rs  numeric.rs  run.rs  serde.rs  vector.rs
weld/src/codegen/c/builder/: appender.rs  for_loop.rs  merger.rs  mod.rs
weld/src/codegen/llvm/: jit.rs
weld/src/codegen/llvm2/: jit.rs
weld/src/optimizer/transforms/: size_inference.rs
weld/src/util/: dump.rs  env.rs  id.rs  mod.rs  offload_ve.rs  stats.rs  veoffload.rs
